stylesheets/custom-style.css
/*========================================*/
/*  ROOT VARIABLES                     */
/*========================================*/
:root {
	/* Colours */
	--colours-primary: rgba(242, 118, 108, 1.00);
	--colours-primary-light: rgba(241, 196, 192, 1.00);
	--colours-accent-blue: rgba(21, 181, 217, 1.00);
	--colours-accent-yellow: rgba(243, 205, 20, 1.00);
	--colours-accent-blue-dark: rgba(47, 120, 145, 1.00);
	--colours-surface-light: rgba(242, 242, 242, 1.00);
	--colours-surface-dark: rgba(13, 11, 30, 1.00);
	--colours-surface-mid-green: rgba(184, 217, 208, 1.00);
	--colours-surface-mid-purple: rgba(209, 206, 237, 1.00);
	--colours-accent-blue-light: rgba(168, 228, 242, 1.00);
	--colours-accent-yellow-light: rgba(248, 237, 178, 1.00);

	/* Breakpoints - for reference*/
	--device-widths-desktop: 1280px;
	--device-widths-mobile: 412px;
	--device-widths-tablet: 800px;

	/* Font Families */
	--font-primary: "Epilogue", sans-serif;
	--font-secondary: "Quicksand", sans-serif;
	--font-body: "Noto Sans", sans-serif;

	/* Font Sizes */
	--font-sizes-mobile-h1: 3rem;
	--font-sizes-mobile-h2: 2.5rem;
	--font-sizes-mobile-h3: 2rem;
	--font-sizes-mobile-h4: 1.5rem;
	--font-sizes-mobile-h5: 1.5rem;
	--font-sizes-mobile-h6: 1.25rem;
	--font-sizes-mobile-cta_large: 1.2rem;
	--font-sizes-mobile-cta_medium: 1.12rem;
	--font-sizes-mobile-cta_small: 1rem;
	/* --font-sizes-mobile-lead_strong: 1.25rem; */
	--font-sizes-mobile-lead_reg: 1.25rem;
	/* --font-sizes-mobile-p_strong: 1rem; */
	--font-sizes-mobile-p_reg: 1rem;

}




/*========================================*/
/*  GENERAL STYLES                        */
/*========================================*/

body {
	color: var(--colours-surface-dark);
	background-color: var(--colours-surface-light);
}

section {
	margin: 3rem auto;
}


.material-symbols-sharp {
  font-variation-settings:
	'FILL' 0,
	'wght' 400,
	'GRAD' 0,
	'opsz' 24;
}


/*-------------------------------*/
/*	Typography          */
/*-------------------------------*/

/*-------- Defaults --------*/
h1, h2, h3, h4, h5, h6 {
	max-width: calc((10/12)*100vw);
	margin: 1rem auto;
	font-family: var(--font-primary);
	font-style: normal;
	font-weight: 900;
	line-height: normal;
	color: var(--colours-surface-dark);
}

h1 {
	font-size: var(--font-sizes-mobile-h1);
}

h2 {
	font-size: var(--font-sizes-mobile-h2);
}

h3 {
	font-size: var(--font-sizes-mobile-h3);
}

h4 {
	font-size: var(--font-sizes-mobile-h4);
}

h5 {
	font-size: var(--font-sizes-mobile-h5);
}

h6 {
	font-size: var(--font-sizes-mobile-h6);
}

p {
	max-width: calc((10/12)*100vw);
	margin: 1rem auto;
	font-family: var(--font-body);
	font-size: var(--font-sizes-mobile-p_reg);
	font-style: normal;
	font-weight: 400;
	line-height: normal;
}

.lead-text, .lead-text > * {
	font-family: var(--font-secondary);
	font-weight: 500;
	font-size: var(--font-sizes-mobile-lead_reg);
}

h1.entry-title {
	text-align: center;
	padding-top: 2rem;
}

.page-intro {
	text-align: center;
}



/*========================================*/
/*  COMPONENTS                            */
/*========================================*/

/*-------------------------------*/
/*	Buttons                      */
/*-------------------------------*/
.btn_base {
	display: flex;
	align-items: center;
	gap: 0.5rem;
	margin: 0 auto;
	max-width: 20rem;
	text-align: center;
}

.btn_lg {
	background-color: var(--colours-accent-blue);
	padding: 1rem 1.5rem;
	border-radius: 10rem;
	font-family: var(--font-secondary);
	font-size: var(--font-sizes-mobile-cta_large);
	font-weight: 700;
}

.btn_lg .material-symbols-sharp {
	font-size: 1.5rem;
}

/*-------------------------------*/
/*	Main Header                  */
/*-------------------------------*/
.site-header {
	display: flex;
	width: 100%;
	flex-flow: row nowrap;
	align-items: center;
	justify-content: space-between;
	padding: 1rem 0rem 0.5rem 1rem;
	color: var(--colours-primary);
	background-color: var(--colours-surface-dark);
	border-radius: 0 0 1rem 1rem;
	border: none;
}

.site-header .site-title {
	color: var(--colours-primary);
	margin: 0;
}

.site-header .site-branding .site-logo svg {
	fill: var(--colours-primary);
	width: 4rem;
	height: 4rem;
}

.main-navigation {
	position: relative;
	width: auto;
	justify-items: right;
}

.menu-toggle {
	display: flex;
	flex-flow: column nowrap;
	background: transparent;
	border: none;
	color: var(--colours-primary);
	font-family: var(--font-secondary);
	font-size: 1rem;
}

.menu-toggle .material-symbols-sharp {
	font-size: 2.5rem;
}

.main-navigation ul {
	visibility: hidden;
	display: flex;
	padding: 1rem;
	gap: 1rem;
	flex-flow: column nowrap;
	position: absolute;
	align-items: center;
	width: 100vw;
	height: 0;
	top: 100%;
	right: 0;
	left: auto;
	transition: all 400ms ease-out;
}

/* Copied from style.css - Small menu, screen width < 37.5em */
.main-navigation.toggled ul {
	visibility: visible;
	height: auto;
	top: 110%;
	border-radius: 0 0 1rem 1rem;
	background-color: var(--colours-surface-dark);
}

.main-navigation.toggled ul::before {
	content: '';
	width: 100vw;
	height: 2rem;
	background-color: var(--colours-surface-dark);
	position: absolute;
	top: -2rem;
	left: 0;
	z-index: -1;
}

.main-navigation ul li {
	visibility: hidden;
	width: fit-content;
	background-color: var(--colours-primary);
	border-radius: 50rem;
	padding: 0.5rem 1rem;
	transform: translateY(-1rem);
	transition: transform 400ms ease-out;
}

/* Transition animate visibility - options were still showing when bg was animating, controlled with toggle in navigation.js */
.main-navigation ul li.show-fade-in {
	visibility: visible;
	transform: translateX(0);
}

.main-navigation ul a {
	color: var(--colours-surface-dark);
	font-family: var(--font-primary);
	font-size: var(--font-sizes-mobile-cta_medium);
	font-weight: 700;
}

/*-------------------------------*/
/*	Main Footer          		 */
/*-------------------------------*/

/*-------- Footer Divider --------*/
.site-footer .footer-divider {
	width: 100%;
	height: 3rem;
}

.site-footer .footer-divider svg path {
	stroke-width: 3%;
}

/*-------- Footer Content --------*/
/* Content Container */
.site-footer .site-info {
	display: flex;
	flex-flow: row wrap;
	padding: 0 4rem;
	gap: 1rem 6rem;
	justify-content: center;
	align-items: center;
}

/* Branding */
.site-footer .footer-branding > * {
	margin: 0;
}

.site-footer .footer-branding {
	display: flex;
	flex-flow: row wrap;
	justify-content: center;
	align-items: center;
	gap: 0.5rem 2rem;
}

	/* Logo */
.site-footer .footer-branding .footer-logo svg {
	width: 6rem;
	height: auto;
}

/* Copyright */
.site-footer .copyright {
	flex-grow: 1;
	text-align: center;
}



/*========================================*/
/*  PAGE SPECIFIC STYLES                  */
/*========================================*/

/*-------------------------------*/
/*	Home page         			 */
/*-------------------------------*/

/*-------- Home Hero --------*/
/* Animated Flux header */

/* Container */
.home-hero {
	/* border: solid 1px red; */
	margin-top: 0;
	text-align: center;
	position: relative;
}

.home-hero .waves-bg {
	/* border: solid 1px orange; */
	position: relative;
	width: 100%;
	height: 40vh;
	overflow: hidden;
}

.home-hero .waves-bg svg {
	/* border: solid 1px green; */
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%,-50%);
	height: 100%;
	width: auto;
	z-index: -999;
}

/* Waves */
.home-hero .waves-bg svg#home-hero-paths {
	--edges-mask-gradient: linear-gradient(90deg, transparent 0%, black 10%, black 90%, transparent 100%);
	-webkit-mask-image: var(--edges-mask-gradient);
  	mask-image: var(--edges-mask-gradient);
}

/* Arrow */
.home-hero .waves-bg svg#home-hero-arrow {
	/* border: solid 1px purple; */
	width: 90%;
	left: 0;
	transform: translate(0%,-50%);
}

/* Text */

.home-hero .flux-name {
	width: 50%;
	max-width: 10rem;
	position: absolute;
	margin: 0;
	top: 50%;
	left: 50%;
	transform: translate(-50%,-50%);
	background-color: var(--colours-primary);
	aspect-ratio: 1/1;
	border-radius: 1000rem;
	align-content: center;
}

.home-hero .text-content {
	/* border: solid 1px blue; */
	background: linear-gradient(0deg, var(--colours-surface-light) 25%, rgba(256,256,256,0) 100%);
	width: 100%;
}

.home-hero .strapline {
	font-family: var(--font-primary);
	font-size: 2rem;
	font-weight: 800;
}

.home-hero .description {
	font-family: var(--font-primary);
	font-size: 1.25rem;
	font-weight: 900;
}




/*========================================*/
/*  MEDIA QUERIES                     */
/*========================================*/

/*------------------------------------------*/
/*	Mobile landscape, small tablet          */
/*------------------------------------------*/
@media screen and (min-width: 600px) {
	/*-------- Home Hero --------*/
	.home-hero .waves-bg {
		height: 50vh;
	}
}

/*-------------------------------*/
/*	Tablet          			 */
/*-------------------------------*/

@media screen and (min-width: 800px) {

	/*-------- Main Header --------*/

	.main-navigation ul {
		flex-flow: row wrap;
		justify-content: flex-end;
	}
	
	/*-------- Main Footer --------*/
	.site-footer .footer-divider {
	width: 100%;
	height: 4rem;
}
	.site-footer .copyright {
		text-align: right;
	}

	
}

/*-------------------------------*/
/*	Desktop          			 */
/*-------------------------------*/
@media screen and (min-width: 1280px){

	/*-------- Typography --------*/
	h1, h2, h3, h4, h5, h6 {
		max-width: calc((8/12)*100vw);
	}

	p {
		max-width: calc((8/12)*100vw);
	}

}




/*========================================*/
/*  TESTS (delete when finished)          */
/*========================================*/

/* ------ GSAP TESTS -------- */
/* Styles gsap test blocks on Home page */
.my-element {
	font-size: 2rem;
	margin: 0;
	background: lightseagreen;
	display: inline-block;
}

.my-element-2 {
	background: blue;
	margin: 0;
	width: 25%;
}

